--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,14 @@
 
 # testing
 /coverage
-
 # database
 /prisma/db.sqlite
 /prisma/db.sqlite-journal
 
-# next.js
-/.next/
-/out/
-next-env.d.ts
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
