--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
@@ -51,11 +52,11 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
-    "@types/express": "^5.0.1",
-    "@types/mongoose": "^5.11.97",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.3",
     "@types/nodemailer": "^6.4.17",
