--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,6 @@
 services:
   mongodb:
-    image: mongo:6.0
+    image: mongo:latest
     container_name: pledgepoint-mongodb
     restart: always
     environment:
@@ -11,6 +11,17 @@ services:
       - '27027:27017'
     volumes:
       - mongodb-data:/data/db
+    networks:
+      - pledgepoint-network
+
+  mongo-gui:
+    container_name: "pledgepoint-mongo-viewer"
+    image: ugleiton/mongo-gui
+    restart: always
+    ports:
+      - "4324:4321"
+    environment:
+      - MONGO_URL=mongodb://doqett-database:27017/doqett-security
     networks:
       - pledgepoint-network
 
@@ -31,16 +42,14 @@ services:
       dockerfile: Dockerfile
     container_name: pledgepoint-api
     restart: always
-    environment:
-      MONGODB_URI: mongodb://${MONGO_USER:-pledgepoint}:${MONGO_PASSWORD:-pledgepoint_password}@mongodb:27017/${MONGO_DB:-pledgepoint_db}?authSource=admin
-      REDIS_URL: redis://redis:6379
-      NODE_ENV: ${NODE_ENV:-development}
-      PORT: 3000
+    env_file:
+      - .env
     ports:
       - '3030:3000'
     volumes:
-      - ./:/app
-      - /app/node_modules
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    command: npm run dev
     networks:
       - pledgepoint-network
     depends_on:
