--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redis": "^5.0.0",
     "speakeasy": "^2.0.0",
     "uuid": "^11.1.0",
+    "web-push": "^3.6.7",
     "winston": "^3.17.0",
     "zod": "^3.24.3",
     "zxcvbn": "^4.4.2"
@@ -61,6 +62,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
+    "@types/web-push": "^3.6.4",
     "@types/zxcvbn": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
